// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapBulkActions.vue should render all bulk actions 1`] = `
<section class="bulk-actions"><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.selectAllMaps
  </button><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.changeMapPrivacy
  </button><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.duplicateMap
  </button><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.lockMap
  </button><button class="bulk-actions__button button button--ghost is-txtAlert">
    BulkActions.maps.deleteMap
  </button></section>
`;

exports[`MapBulkActions.vue should render all multiple actions for all selected "Deselect all", "Lock maps" and "Delete maps" actions 1`] = `
<section class="bulk-actions">
  <!----><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.deselectAllMaps
  </button><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.lockMaps
  </button><button class="bulk-actions__button button button--ghost is-txtAlert">
    BulkActions.maps.deleteMaps
  </button></section>
`;

exports[`MapBulkActions.vue should render all multiple actions: "Select all", "Deselect all", "Lock maps", "Delete maps" 1`] = `
<section class="bulk-actions"><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.selectAllMaps
  </button><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.deselectAllMaps
  </button><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.lockMaps
  </button><button class="bulk-actions__button button button--ghost is-txtAlert">
    BulkActions.maps.deleteMaps
  </button></section>
`;

exports[`MapBulkActions.vue should render all single actions: "Select all", "Create map", "Change privacy", "Duplicate map", "Lock map", "Delete map" 1`] = `
<section class="bulk-actions"><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.selectAllMaps
  </button><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.changeMapPrivacy
  </button><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.duplicateMap
  </button><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.lockMap
  </button><button class="bulk-actions__button button button--ghost is-txtAlert">
    BulkActions.maps.deleteMap
  </button></section>
`;

exports[`MapBulkActions.vue should render multiple locked action: "Unlock maps" 1`] = `
<section class="bulk-actions"><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.unlockMaps
  </button></section>
`;

exports[`MapBulkActions.vue should render single locked action: "Unlock map" 1`] = `
<section class="bulk-actions"><button class="bulk-actions__button button button--ghost">
    BulkActions.maps.unlockMaps
  </button></section>
`;
